--- a/src/components/ui/_resize-handle.scss
+++ b/src/components/ui/_resize-handle.scss
@@ -1,5 +1,10 @@
 @include ui-component {
     .workspace-leaf-resize-handle {
         background-color: var(--color-transparent);
+
+        &:hover {
+            background-color: var(--interactive-accent);
+            border-color: var(--interactive-accent);
+        }
     }
 }
