--- a/src/themes/_light.scss
+++ b/src/themes/_light.scss
@@ -33,9 +33,9 @@
     --interactive-accent-rgba: 152, 202, 215;
     --interactive-accent-hover: var(--color-pink-3);
     --interactive-success: var(--color-green-5);
-    --scrollbar-active-thumb-bg: var(--text-accent);
+    --scrollbar-active-thumb-bg: var(--interactive-accent-hover);
     --scrollbar-bg: var(--background-primary);
-    --scrollbar-thumb-bg: var(--background-primary-alt);
+    --scrollbar-thumb-bg: var(--interactive-accent);
     --highlight-mix-blend-mode: normal;
     --color-topic-tag-bg: var(--color-orange-4);
     --cursor-bg: var(--color-pink-3);
